# beyond-the-ball

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_data_exploration.ipynb
reports/: metrics_log.csv
src/beyond_the_ball/: __init__.py
src/beyond_the_ball/data/: __init__.py  join_360.py  splits.py
src/beyond_the_ball/eval/: __init__.py  metrics.py  plots.py
src/beyond_the_ball/features/: __init__.py  flat.py  labels.py  spatial.py
src/beyond_the_ball/models/: __init__.py  datasets.py  nn_common.py  persistence.py  q1_nn.py  q1_tree.py  q2_logreg.py  q2_nn.py
tests/: conftest.py  test_features_flat.py  test_features_spatial.py  test_join_360.py  test_labels.py  test_metrics.py  test_q1_models.py  test_q1_persistence.py  test_q2_models.py  test_q2_persistence.py  test_splits.py
